# rust_postgres_service

./: .gitignore  Cargo.toml  Dockerfile
migrations/2018-10-27-232114_create_posts/: up.sql
src/: db_actix.rs  lib.rs  models.rs
