[package]
name = "rust_postgres"
version = "0.1.0"
authors = ["matt961"]

[dependencies]
diesel = {version = "1.3.3", features = ["postgres", "r2d2"]}
dotenv = "0.13"
actix-web = "0.7"

env_logger = "0.5"

actix = "0.7"

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

r2d2 = "0.8"
